--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "leader-line": "^1.0.7",
+    "leader-line-new": "^1.1.9",
     "mermaid": "^8.13.9",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
