--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,7 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "./node_modules/leader-line/leader-line.min.js"
+              "src/project-diagram.js"
             ]
           },
           "configurations": {
